--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -2,9 +2,10 @@
 
 <div class="container">
   <h1>Clients</h1>
-
-  <%= link_to "New client", new_client_path %>
-
+  <div class="mt-4">
+    <td><%= link_to "New client", new_client_path, class: "btn btn-primary" %></td>
+  </div>
+  <hr>
   <div id="clients">
     <table class="table table-bordered">
       <thead>
