--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,11 @@
   </head>
 
   <body>
+  
     <%= render "shared/navbar" %>
+    <% flash.each do |key, message| %>
+      <div class="alert alert-<%= key %>"><%= message %></div>
+    <% end %>
     <div class="container">
       <%= yield %>
     </div>
